fix for image alignment issue in WP 5.5

--- a/sass/editor-style.scss
+++ b/sass/editor-style.scss
@@ -167,7 +167,7 @@ th {
   margin: $baseline-height 0;
 }
 .wp-block-image {
-  margin: $baseline-height 0;
+  margin: $baseline-height auto;
 }
 img,
 .alignright,
